--- a/Servlets/ServletApp/WebContent/WEB-INF/web.xml
+++ b/Servlets/ServletApp/WebContent/WEB-INF/web.xml
@@ -17,4 +17,12 @@
   	<servlet-name>AddServlet</servlet-name>
   	<url-pattern>/add</url-pattern>
   </servlet-mapping>
+  <servlet>
+  	<servlet-name>SqServlet</servlet-name>
+  	<servlet-class>com.ServletApp.SqServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>SqServlet</servlet-name>
+  	<url-pattern>/sq</url-pattern>
+  </servlet-mapping>
 </web-app>
