--- a/Servlets/ServletApp/WebContent/WEB-INF/web.xml
+++ b/Servlets/ServletApp/WebContent/WEB-INF/web.xml
@@ -20,9 +20,21 @@
   <servlet>
   	<servlet-name>SqServlet</servlet-name>
   	<servlet-class>com.ServletApp.SqServlet</servlet-class>
+  	<init-param>
+  		<param-name>Name</param-name>
+  		<param-value>Noddy</param-value>
+  	</init-param>
   </servlet>
   <servlet-mapping>
   	<servlet-name>SqServlet</servlet-name>
   	<url-pattern>/sq</url-pattern>
   </servlet-mapping>
+  <context-param>
+  	<param-name>Name</param-name>
+  	<param-value>Oswald</param-value>
+  </context-param>
+   <context-param>
+  	<param-name>Phone</param-name>
+  	<param-value>None</param-value>
+  </context-param>
 </web-app>
