--- a/ServletApp/WebContent/WEB-INF/web.xml
+++ b/ServletApp/WebContent/WEB-INF/web.xml
@@ -9,14 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
+  <!-- <servlet>
   	<servlet-name>AddServlet</servlet-name>
   	<servlet-class>com.ServletApp.AddServlet</servlet-class>
   </servlet>
   <servlet-mapping>
   	<servlet-name>AddServlet</servlet-name>
   	<url-pattern>/add</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping>  -->
   <servlet>
   	<servlet-name>SqServlet</servlet-name>
   	<servlet-class>com.ServletApp.SqServlet</servlet-class>
